--- a/E-Agenda.Dominio/E-Agenda.Dominio.csproj
+++ b/E-Agenda.Dominio/E-Agenda.Dominio.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>E_Agenda.Dominio</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
